...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGetPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:elevation="2dp"
        android:text="@string/get_picture_button_text"
        app:layout_constraintBottom_toBottomOf="@id/guide_line_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonShowCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/show_camera_button_text"
        app:layout_constraintBottom_toBottomOf="@id/guide_line_btn"
        app:layout_constraintEnd_toEndOf="parent"
...
